--- a/index.html
+++ b/index.html
@@ -715,7 +715,34 @@
 
     <div class="main">
         <div class="container">
+         <!-- START APP -->
+            <div class="app_container">
+                <div class="app_image">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/7/7e/Roblox_Logo_2022.jpg" alt>
+                    <p>Latest: <b>3.2.1</b></p>
+                </div>
+                <div class="app_info">
+                    <p class="app_name">Roblox ModApk</p>
 
+                    <div class="items">
+                        <span class="item_span user_span"><img src="https://zupimages.net/up/23/37/mpoe.png" alt>548.779</span>
+                        <span class="item_span down_span"><img src="https://zupimages.net/up/23/37/o3go.png" alt>Download تحميل</span>
+                    </div>
+
+                    <p class="choose_device">Choose your device  إختر نوع جهازك </p>
+
+                    <div class="down_buttons">
+                        <button class="ios" id="gtaios"><img src="https://zupimages.net/up/23/37/u5py.png" alt>IOS</button>
+                        <button class="android" id="gtaandroid"><img src="https://zupimages.net/up/23/37/bvm0.png" alt>ANDROID</button>
+                    </div>
+
+                    <div class="rating">
+                        <img src="https://zupimages.net/up/23/37/ao6q.png" alt><span>4.7</span>
+                    </div>
+
+                </div>
+            </div>
+            <!-- END APP -->
             <!-- START APP -->
             <div class="app_container">
                 <div class="app_image">
